1999-10-07  Ted Phelps  <phelps@pobox.com>

	* panel.c: added a tool-tip to the history panel which displays
		  the attachment of the message under the pointer.
	
	* history.h, history.c: added a way to find the message in the
		  history at a given x, y position

	* ScrollerP.h, Scroller.c: minor tweaks to the timer code.

1999-10-06  Ted Phelps  <phelps@pobox.com>

	* mail_sub.c: fixed a bug that got introduced in some of
		  yesterday's tidyings.  Silly, silly bug.

	* main.c, tickertape.h, tickertape.c: rearranged the domain stuff
		  so that it can be specified on the command-line or in an 
		  environment variable.
	
1999-10-05  Ted Phelps  <phelps@pobox.com>

	* List.h, List.c: removed
	
	* Hash.h, Hash.c: removed

	* Control.h, Control.c: renamed to panel.h, panel.c.  Effected the
		  great naming reform in this last file.

	* All: lots of tidying
	
1999-10-04  Ted Phelps  <phelps@pobox.com>

	* FileStreamTokenizer.h, FileStreamTokenizer.c: removed
	
	* StringBuffer.h, StringBuffer.c: removed

	* UsenetSubscription.h, UsenetSubscription.c: removed

	* tickertape.c: Purged old UsenetSubscription stuff and replaced
		  it with the exciting new usenet_sub and usenet_parser.

1999-10-03  Ted Phelps  <phelps@pobox.com>

	* List.c: fixed an ancient bug with inserting at the end of the list 

1999-10-02  Ted Phelps  <phelps@pobox.com>

	* tickertape.c: renamed OrbitSubscription to orbit_sub_t

	* Control.c: fixed the miscount of the number of digits in the
		  year portion of the message-id.  This will break again
		  in 10000AD.

	* Control.c: set minimum width and height for the control panel
		  and the about box based on their initial sizes.
	
1999-09-29  Ted Phelps  <phelps@pobox.com>

	* message_glyph.c: This time I think I've got it -- when measuring 
		  character which don't have a glyph in the current font,
		  use the dimensions of default_char.  If, however,
		  default_char does not have a glyph then all dimensions
		  default to zero.
